Implement product search feature
Why?
Given that I am a customer
I should be able to search for a particular product
When on the landing page

How?
Implement method in the product model to query product table

https://www.pivotaltracker.com/story/show/110137708

[finishes #110137708]

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -1,3 +1,45 @@
-// Place all the styles related to the Search controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.result-form {
+  border: 1px solid $my-grey !important;
+  height: 19em;
+  width: 50% !important;
+}
+
+.result-header {
+  background-color: $bg-grey;
+  height: 3em;
+  line-height: 3em;
+  margin: auto;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.result-notice {
+  color: $grey-notice;
+  font-family: $search-form-font;
+  font-size: 0.85em;
+  margin-bottom: 4em;
+  margin-top: 4em;
+  padding-left: 2em;
+}
+
+.search-input-form {
+  color: $grey-notice;
+  font-family: $search-form-font;
+  font-size: 0.875em;
+  padding-left: 2em;
+  width: 80% !important;
+}
+
+#search-input-field {
+  width: 100%;
+}
+
+.search-field {
+  padding-left: 2em;
+  padding-right: 2em;
+  width: 100%;
+}
+
+.small-label-search {
+  padding-left: 1.5em;
+}
