--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -30,3 +30,6 @@ $light-gray: #e0e0e0;
 $pale-orange: #fff4e1;
 $dove-gray: #666666;
 $c-gray: #cccccc;
+$bg-grey: #ebebeb;
+$grey-notice: #212121;
+$search-form-font: "PT Sans", sans-serif;
