Design and Implement Past Orders Page
Why?

Customers should be able to view their past orders and check status

How?

1. Design a template for the past orders page
2. Link it to user profile
3. Fetch available data for the page for display

https://www.pivotaltracker.com/story/show/114690241
[Finishes #114690241]
 Please enter the commit message for your changes. Lines starting

--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -322,3 +322,15 @@ nav {
   font-size: 1em !important;
   padding-left: 0 !important;
 }
+
+.user-profile {
+  display: none;
+  position: absolute;
+  right: 5em;
+  top: 2.1em;
+  width: 10em;
+}
+
+.full-profile {
+  cursor: pointer;
+}
