--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -33,3 +33,5 @@ $c-gray: #cccccc;
 $bg-grey: #ebebeb;
 $grey-notice: #212121;
 $search-form-font: "PT Sans", sans-serif;
+$very-pale-gray: #f4f4f4;
+$dark-gray: #bcbcbc;
