--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -18,8 +18,11 @@
           <span class="white-text small-text">&nbsp;|&nbsp;</span>
           <%= link_to "Currency - NGN", "#", class: 'white-text small-text' %>
           <% if logged_in %>
-          <span class="white-text small-text">&nbsp;|&nbsp;</span>
-          <span class="black-text small-text">Welcome, <%= current_user.first_name %></span>
+            <span class="white-text small-text">&nbsp;|&nbsp;</span>
+            <span class="black-text small-text">
+              <span class="full-profile">Welcome, <%= current_user.first_name %>
+              <%= render "user_profile" %></span>
+            </span>
           <% end %>
         </div>
       </div>
