--- a/app/views/products/_reviews_tab_contents.html.erb
+++ b/app/views/products/_reviews_tab_contents.html.erb
@@ -1,5 +1,5 @@
 <ul class="collection">
-  <% @reviews.each do |review| %>
+  <% @product.reviews.each do |review| %>
     <li class="collection-item avatar">
       <div class="row">
         <div class="col m10">
