Make header div responsive
Why?
The div contained within the header should be responsive. When a user resizes the page the links should still be visible

How?
Remove the `hide-on-med-and-down` class from the div

https://www.pivotaltracker.com/story/show/115680667

[finishes #115680667]

--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -18,68 +18,66 @@
           <span class="white-text small-text">&nbsp;|&nbsp;</span>
           <%= link_to "Currency - NGN", "#", class: 'white-text small-text' %>
           <% if logged_in %>
-            <span class="white-text small-text">&nbsp;|&nbsp;</span>
-            <span class="black-text small-text">Welcome, <%= current_user.first_name %></span>
+          <span class="white-text small-text">&nbsp;|&nbsp;</span>
+          <span class="black-text small-text">Welcome, <%= current_user.first_name %></span>
           <% end %>
         </div>
-			</div>
-		</div>
-		<nav class="white valign-wrapper">
-	       <div class="row container-trim">
-	           <div class="col s2">
-	             <div class="left">
-	             <a class="brand-logo black-text" href="<%= root_path %>">
-	               <div class="left">
-	                 <span>Shopify</span>
-	               </div>
-	             </a>
-	           </div>
-	           </div>
-						 <div class="col s1">&nbsp;</div>
-        	   <div class="col s5 search-container">
-							 <div class="search-bar">
-							 	<div class="input-field my-input" id="search-input">
-									<%= form_tag({controller: "search", action: "result"}, method: "get") do %>
-							 			<%= text_field_tag :term, "", required: "required", placeholder: "Search by product name or category", class: "black-text browser-default", id: "my-input-field" %>
-							 	<% end %>
-							</div>
-							 </div>
-							 <div class="">
-								&nbsp;
-							 </div>
-	           </div>
-	 ​
-	           <div class="col s4">
-	             <div class="hide-on-med-and-down valign-wrapper">
-								<span class="search-icon-span left">
-									<i class="large material-icons search-i" id="search">search</i>
-								</span>
-
-            <div class="right">
-              <span class="white-text small-text">&nbsp;|&nbsp;</span>
-								<span class="category-span">
-
-									<%= link_to "CATEGORIES", categories_path, class: "black-text category-link" %>
-
-                  <%= render "category_dropdown" %>
-
-								</span>
-              <span class="white-text small-text">&nbsp;|&nbsp;</span>
-			 						<span class="cart-span" id="cart-span">
-			 							<a href="#" class="black-text cart-link">CART<span class="total-text"><span id="total-item" class="total-item">
-                      <% if cookies[:cart] && JSON.parse(cookies[:cart]).size > 0 %>
-                        <%= JSON.parse(cookies[:cart]).size %>
-                      <% end %>
-                    </span></span></a>
-                    <%= render "cart_dropdown" %>
-			 						</span>
-              <span class="white-text small-text">&nbsp;|&nbsp;</span>
-              <%= auth_link %>
+      </div>
+    </div>
+    <nav class="white valign-wrapper">
+      <div class="row container-trim">
+        <div class="col s2">
+          <div class="left">
+            <a class="brand-logo black-text" href="<%= root_path %>">
+              <div class="left">
+                <span>Shopify</span>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col s1">&nbsp;</div>
+        <div class="col s5 search-container">
+          <div class="search-bar">
+            <div class="input-field my-input" id="search-input">
+             <%= form_tag({controller: "search", action: "result"}, method: "get") do %>
+             <%= text_field_tag :term, "", required: "required", placeholder: "Search by product name or category", class: "black-text browser-default", id: "my-input-field" %>
+             <% end %>
             </div>
+          </div>
+          <div class="">
+          &nbsp;
           </div>
         </div>
         ​
-      </div>
-    </nav>
+        <div class="col s4">
+          <div class="valign-wrapper">
+            <span class="search-icon-span left">
+             <i class="large material-icons search-i" id="search">search</i>
+           </span>
+
+           <div class="right">
+            <span class="white-text small-text">&nbsp;|&nbsp;</span>
+            <span class="category-span">
+
+              <%= link_to "CATEGORIES", categories_path, class: "black-text category-link" %>
+
+              <%= render "category_dropdown" %>
+
+            </span>
+            <span class="white-text small-text">&nbsp;|&nbsp;</span>
+            <span class="cart-span" id="cart-span">
+              <a href="#" class="black-text cart-link">CART<span class="total-text"><span id="total-item" class="total-item">
+                <% if cookies[:cart] && JSON.parse(cookies[:cart]).size > 0 %>
+                <%= JSON.parse(cookies[:cart]).size %>
+                <% end %>
+              </span></span>
+            </a>
+            <%= render "cart_dropdown" %>
+          </span>
+          <span class="white-text small-text">&nbsp;|&nbsp;</span>
+          <%= auth_link %>
+        </div>
+      </nav>
+    </div>
   </div>
 </div>
