Checkout Functionality Test
Why?
Tests to ensure that the Checkout functionality works correctly

How?
Wrote integration test that adds products to cart, and proceeds to place order, fill out delivery, payment details and order confirmation.

https://www.pivotaltracker.com/story/show/114690085

--- a/app/views/orders/address.html.erb
+++ b/app/views/orders/address.html.erb
@@ -31,8 +31,12 @@
       </div>
       <div class="row">
         <div class="col l6">
-          <%= f.label :gender, class: "bold black-text" %>
-          <%= f.select :gender, ["", "male", "female"] %>
+          <%= f.label :gender, class: "bold black-text"%>
+          <%= f.select(:gender, class: "browser-default") do %>
+            <% ['male', 'female'].each do |c| -%>
+              <%= content_tag(:option, c, value: c) %>
+            <% end %>
+          <% end %>
         </div>
         <div class="col l6">
           <%= f.label :phone, class: "bold black-text" %>
