--- a/app/views/orders/_order_details.html.erb
+++ b/app/views/orders/_order_details.html.erb
@@ -25,6 +25,7 @@
 
   <div class="row col l8 expand-right">
       <%= render partial: "item_display", locals: { order: order } %>
+      <div class="review"><a  class="close-review" href="#"><i class="fa fa-times"></i></a></div>
   </div>
 
 </div>
