--- a/app/views/orders/_item_display.html.erb
+++ b/app/views/orders/_item_display.html.erb
@@ -1,8 +1,13 @@
 <% order.order_items.each do |item| %>
 <div class="col l4">
-  <div class="row order-image"><%= image_tag item.product.product_image_links.first.link_name, size: "140" %>
-  </div>
-  <div class="row order-description"><%= item.product.name%>
+  <div class="row order-image"><%= image_tag item.product.product_image_links.first.link_name, size: "140" %></div>
+  <div class="row order-description"><%= item.product.name%></div>
+  <div class="row order-description">
+
+  <%= link_to "rate product", review_path(item_id: item.id), { class: "rateproduct", remote: true} %>
+
   </div>
 </div>
+
+
 <% end %>
