--- a/app/views/orders/payment.html.erb
+++ b/app/views/orders/payment.html.erb
@@ -46,7 +46,7 @@
         </div>
       </div>
       <div id="pay-with-paypal" class="col s12">
-        Not supported yet
+        <%= render "paypal_form" %>
       </div>
       <div id="getmyshop-pay" class="col s12">
         Not supported yet
