--- a/app/views/application/_cart_dropdown.html.erb
+++ b/app/views/application/_cart_dropdown.html.erb
@@ -1,4 +1,4 @@
-<div id="cart-dropdown" class="nav-link-items">
+11  <div id="cart-dropdown" class="nav-link-items">
   <%= form_tag do %>
     <% if cookies[:cart] && JSON.parse(cookies[:cart]).size > 0 %>
       <div class="cart-dropdown-head">
