--- a/app/views/products/review.js.erb
+++ b/app/views/products/review.js.erb
@@ -2,6 +2,7 @@ function displayReview() {
   $('#review').openModal();
   $(".image0").attr( "src" , "<%= image_path @product_to_rate.product_image_links.first.link_name, :id => 'image0' %>" );
   $(".item-pname").text("<%= @product_to_rate.name %>");
+  $(".product-id").val("<%= @product_to_rate.id %>");
 };
 
 displayReview();
