--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -32,7 +32,7 @@
 
       <div class="digg-pagination right"><%= will_paginate @products %></div>
     </div>
-    <div class= "row category-products">
+    <div class= "row category-products" id="filterrific_results">
       <%= render partial: "landing/product", collection: @products %>
     </div>
     <div class="row">
