--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -16,19 +16,24 @@
         <span>&nbsp;&nbsp;</span>
       </div>
     </div>
-    <%= render partial: 'application/filter_widget' %>
-    <div class= "row-break-small"></div>
-    <div class="row sort">
-      <div class="col s2">
-        <select class="browser-default">
-         <option value="" disabled selected>Sort By</option>
-          <option value="hprice">Highest Price</option>
-          <option value="lprice">Lowest Price</option>
-          <option value="arrival">Arrival</option>
-          <option value="rating">Rating</option>
-        </select>
+
+      <div class="row">
+        <%= render partial: 'application/filter_widget' %>
+        <div class= "row-break-small"></div>
+        <div class="row sort">
+          <div class="col s2">
+            <select class="browser-default">
+             <option value="" disabled selected>Sort By</option>
+              <option value="hprice">Highest Price</option>
+              <option value="lprice">Lowest Price</option>
+              <option value="arrival">Arrival</option>
+              <option value="rating">Rating</option>
+            </select>
+          </div>
+        <div class="row" id="filterrific_results">
+          <%= render partial: 'paginate_products' %>
+        </div>
       </div>
-    <%= render partial: 'paginate_products' %>
   </div>
 </div>
 <%= render partial: 'prefooter' %>
