feat (checkout): add hooks to routes
add paypal hook to trigger events after completing transaction on paypal

--- a/app/views/orders/payment.html.erb
+++ b/app/views/orders/payment.html.erb
@@ -46,7 +46,7 @@
         </div>
       </div>
       <div id="pay-with-paypal" class="col s12">
-        <%= render "paypal_form" %>
+        <%= render "paypal" %>
       </div>
       <div id="getmyshop-pay" class="col s12">
         Not supported yet
