--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -35,3 +35,5 @@ $grey-notice: #212121;
 $search-form-font: "PT Sans", sans-serif;
 $very-pale-gray: #f4f4f4;
 $dark-gray: #bcbcbc;
+$gold: #eeaa00;
+$grey-label: #9e9e9e;
