--- a/app/views/orders/_orders_row.html.erb
+++ b/app/views/orders/_orders_row.html.erb
@@ -5,12 +5,12 @@
 
       <div class="order-group">
         <div class="order-body">
-          <div class="col l2"><%= order.user_id %></div>
+          <div class="col l2"><%= order.order_number %></div>
           <div class="col l2">
             <%= Date.strptime((order.created_at).to_s) %>
           </div>
-          <div class="col l2">Order Number</div>
-          <div class="col l2">Order Number</div>
+          <div class="col l2"><%= order.total_amount %> &nbsp;</div>
+          <div class="col l2">Unknown</div>
           <div class="col l2">&nbsp;</div>
           <div id="expand-order" class="col l2 expand-order">
             <%= link_to "details", "#" %>&nbsp;&nbsp;&nbsp;<span class"plus-minus"></span>
