--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -13,6 +13,7 @@ $button-background: #338574;
 $button-border: #33842a;
 $button-color: #f3f3f3;
 $section-font: 'ProximaNova', sans-serif, Arial;
+$rating-label:"Roboto", sans-serif;
 $shadow-color: rgba(0, 0, 0, 0.75);
 $facebook-blue: #3b5998;
 $twitter-blue: #4099ff;
