--- a/app/views/orders/_item_display.html.erb
+++ b/app/views/orders/_item_display.html.erb
@@ -5,8 +5,8 @@
   <div class="row order-description">
 
 
-    <%= link_to "Review", review_path(item_id: item.product.id), { class: "btn modal-trigger", remote: true} %>
-    <div id="review" class="modal review-div">
+    <%= link_to "Review", review_path(item_id: item.product.id), { class: "btn review-button modal-trigger btn-flat", remote: true} %>
+    <div id="review" class="modal">
       <div class="modal-content">
         <h6>Write A Review</h6>
         <a  class="close-review" href="#"><i class="fa fa-times"></i></a>
@@ -17,10 +17,9 @@
             <div class="row review-image-div">
               <%= image_tag "", class: "image0", size: "140" %>
             </div>
-              <ul>
-                <li id="product-name" class="product-to-rate"> </li>
-                <li id="product-subcategory" class="product-to-rate"> </li>
-              </ul>
+            <ul>
+              <li id="product-name" class="product-to-rate"> </li>
+            </ul>
           </div>
           <div class="col l9">
             <%= form_tag({controller: "products", action: "rate"}, method: "post", remote: true) do %>
@@ -33,13 +32,12 @@
               <div class="col s4">
                 <span class="rating-label">Rating</span>
 
-                  <div class="rating">
-                    <span class="star" id="star5">☆</span>
-                    <span class="star" id="star4">☆</span>
-                    <span class="star" id="star3">☆</span>
-                    <span class="star" id="star2">☆</span>
-                    <span class="star" id="star1">☆</span>
-
+                <div class="rating">
+                  <span class="star" id="star5">☆</span>
+                  <span class="star" id="star4">☆</span>
+                  <span class="star" id="star3">☆</span>
+                  <span class="star" id="star2">☆</span>
+                  <span class="star" id="star1">☆</span>
                 </div>
                 <div class="row">
                 </div>
