--- a/app/views/orders/payment.html.erb
+++ b/app/views/orders/payment.html.erb
@@ -1,5 +1,4 @@
 <%= render partial: 'header' %>
-
 <div class="container">
   <div class="order-forms-container">
     <div class="row">
@@ -8,7 +7,7 @@
           <li class="tab col s3">
             <a href="#pay-on-delivery" class="black-text active">Pay on
               Delivery</a></li>
-          <li class="tab col s3">
+          <li class="tab col s3 paypal">
             <a href="#pay-with-paypal" class="black-text">Pay with Paypal</a>
           </li>
           <li class="tab col s3">
