--- a/app/views/orders/address.html.erb
+++ b/app/views/orders/address.html.erb
@@ -1,82 +1,22 @@
 <%= render partial: 'header' %>
 
 <div class="container row">
-  <div class="col l4">
-      <div class="all-addresses">
-        <% @user_addresses.each do |address| %>
-        <div class="user-address row">
-         <span><%= address.state %></span>
-       </div>
-       <% end %>
-     </div>
-   </div>
   <div class="col l8">
-    <div class="order-forms-container">
-      <h4>
-        Fill in the delivery information
-      </h4>
-
-      <%= form_tag({controller: "orders", action: "summary"}, method: "post") do %>
-      <%= text_field_tag :user_id, current_user.id %>
-      <div class="row">
-        <div class="col l6">
-          <%= label_tag :name, "name", class: "bold black-text" %>
-          <%= text_field_tag :name, "", class: "validate", required: :required,  pattern: ".{3,100}", title: "3 to 100 characters required" %>
+  <span id="opener">open addresss form</span>
+    <div id="new-address" class="modal">
+        <div class="modal-content">
+        <%= render partial: 'address_form' %>
         </div>
-        <div class="col l6">
-          <%= label_tag :email, "Email", class: "bold black-text" %>
-          <%= email_field_tag :email, current_user.email, class: "validate", required: :required,  pattern: ".{5,150}", title: "Valid email, 5 - 150 characters" %>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col l6">
-          <%= label_tag :address, "Address", class: "bold black-text" %>
-          <%= text_field_tag :address, "", class: "validate", required: :required,  pattern: ".{5,}", title: "5 characters required" %>
-        </div>
-        <div class="col l6">
-          <%= label_tag :landmark, "Landmark", class: "bold black-text" %>
-          <%= text_field_tag :landmark %>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col l6">
-          <%= label_tag :gender, "Gender", class: "bold black-text"%>
-          <%= select_tag(:gender, class: "browser-default") do %>
-          <% ['male', 'female'].each do |c| -%>
-          <%= content_tag(:option, c, value: c) %>
-          <% end %>
-          <% end %>
-        </div>
-        <div class="col l6">
-          <%= label_tag :phone, "Phone", class: "bold black-text" %>
-          <%= text_field_tag :phone, "", class: "validate", required: :required, pattern: ".{3,15}", title: "3 - 15 characters" %>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col l4">
-          <%= label_tag :city, "City", class: "bold black-text" %>
-          <%= text_field_tag :city, "", class: "validate", required: :required,  pattern: ".{2,100}", title: "2 - 100 characters" %>
-        </div>
-        <div class="col l4">
-          <%= label_tag :state, "State", class: "bold black-text" %>
-          <%= text_field_tag :state, "", class: "validate", required: :required,  pattern: ".{2,100}", title: "2 - 100 characters" %>
-        </div>
-        <div class="col l4">
-          <%= label_tag :country, "Country", class: "bold black-text" %>
-          <%= text_field_tag :country, "", class: "validate", required: :required,  pattern: ".{2,100}", title: "2 - 100 characters" %>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col m12">
-          <%= submit_tag "Save and Continue", class: "btn right" %>
-        </div>
-      </div>
-      <% end %>
     </div>
   </div>
+  <div class="col l4">
+    <div>
+      <% @user_addresses.each do |address| %>
+      <div class="user-address row">
+       <span><%= address.state %></span>
+     </div>
+     <% end %>
+   </div>
+ </div>
 </div>
 <%= render partial: 'footer' %>
